--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
 
     <div>
       <img width="400"
-           src="https://upload.Wikimedia.org/Wikipedia/commons/9/9d/As11-40-5886.jpg">
+           src="https://upload.wikimedia.org/wikipedia/commons/9/9d/As11-40-5886.jpg">
     <div>
   <body>
 <html>
